# todo-w-rust-worker

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  wrangler.toml
api-specs/: Change Single Rescue.bru  Change Single Todo.bru  Delete SIngle Rescue.bru  Delete SIngle Todo.bru  Get All Rescues.bru  Get All Todo.bru  Get Single Rescue.bru  Get Single Todo.bru  Home.bru  Post A Single Rescue.bru  Post A Single Todo.bru  bruno.json
src/: lib.rs  state.rs  todo_handlers.rs
