[package]
name = "todo-worker-rust"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.134"
worker = "0.5.0"

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
